@@ -34,9 +34,24 @@ opts.on("-r","--root ROOT_DIR",String) {|val| @@root_directory=val}
 filename=opts.parse(ARGV)[0] rescue RDoc::usage_from_file(__FILE__,'Usage')
 	
 require 'webrick'
-require 'cgi'
 require 'DSK'
 include WEBrick
+
+@@uri_cache={}
+@@dsk_cache={}
+def get_uri_from_cache(uri)
+	if @@uri_cache[uri].nil? then
+		@@uri_cache[uri]=open(uri).read
+	end
+	@@uri_cache[uri]
+end
+
+def get_dsk_from_cache(uri)
+	if @@dsk_cache[uri].nil? then
+		@@dsk_cache[uri]=DSK.read(uri)
+	end
+	@@dsk_cache[uri]
+end
 
 def common_header
 "
@@ -55,14 +70,28 @@ def root_dir_is_website?
 	require 'open-uri'
 	@@root_directory=~/^http[s]?:/?true : false
 end
+def make_absolute_path(relative_path)
+	if root_dir_is_website? then
+		@@root_directory+uri_encode(relative_path)
+	else
+		@@root_directory+relative_path
+	end	
+end
+
+def uri_encode(s)
+	#standard URI.escape appears to miss some important characters
+	require 'uri'
+	URI.escape(s).sub("[","%5b").sub("]","%5d")
+end
 def get_directories_and_files(relative_path)
 	directories=[]
 	dsk_files=[]
+	absolute_path=make_absolute_path(relative_path)
 	if root_dir_is_website? then
-		html=open(@@root_directory+relative_path).read
+		html=get_uri_from_cache(absolute_path)
 		doc=Hpricot(html)
 		doc.search("a[@href]").each do |a|
-			href=CGI.unescape(a.attributes["href"])
+			href=URI.unescape(a.attributes["href"])
 			if (href=~/\w\/$/) then #directories end with a /
 				directories<<File.basename(href)
 			elsif DSK.is_dsk_file?(href) then
@@ -71,7 +100,6 @@ def get_directories_and_files(relative_path)
 		end
 	else 
 		if File.exist?(absolute_path) && (File.stat(absolute_path).directory?) then
-			absolute_path=@@root_directory+relative_path
 			dir=Dir.new(absolute_path)
 			dir.each do |f| 
 				directories<<f if (f[0].chr!=".") && (File.stat(absolute_path+"/"+f).directory?)
@@ -91,15 +119,15 @@ def make_navigation_path(relative_path,filename=nil)
 		if p.length>0 then
 			partial_path+="/#{p}"			
 			if DSK.is_dsk_file?(partial_path) then
-				s+=" / <a href=/catalog#{CGI.escape(partial_path)}> #{p}</a>"
+				s+="/<a href=/catalog#{uri_encode(partial_path)}>#{p}</a>"
 			else
-				s+=" / <a href=/dir#{CGI.escape(partial_path)}> #{p}</a>"
+				s+="/<a href=/dir#{uri_encode(partial_path)}>#{p}</a>"
 			end
 		end
 	end
 	
 	if !filename.nil? then
-		s+=" / <a href=/showfile/#{CGI.escape(relative_path)+'?filename='+CGI.escape(filename)}>#{filename}</a>"
+		s+="/<a href=/showfile/#{uri_encode(relative_path)+'?filename='+uri_encode(filename)}>#{filename}</a>"
 	end
 
 	
@@ -109,14 +137,14 @@ def make_navigation_path(relative_path,filename=nil)
 	#list out the directories
 	
 	s+="<ul>"
-	s+="<li>[dir] <a href=/#{CGI.escape('/dir/'+File.dirname(relative_path))}>..</a>\n"
+	#s+="<li>[dir] <a href=/#{uri_encode('/dir/'+File.dirname(relative_path))}>..</a>\n"
 	directories.sort.each do |d|
-		s+="<li>[dir] <a href=/#{CGI.escape('/dir/'+relative_path+'/'+d)}>#{d}</a>\n"
+		s+="<li>[dir] <a href=/dir/#{uri_encode(relative_path)}/#{uri_encode(d)}>#{d}</a>\n"
 	end
 	
 	#list out the DSK files		
 	dsk_files.sort.each do |f|
-		s+="<li>[dsk] <a href=/#{CGI.escape('/catalog/'+relative_path+'/'+f)}>#{f}</a>\n"
+		s+="<li>[dsk] <a href=/catalog/#{uri_encode(relative_path)}/#{uri_encode(f)}>#{f}</a>\n"
 	end
 	s+="</ul>"
 
@@ -125,13 +153,21 @@ end
 def make_catalog(relative_path)
 	s="<p>"
 	begin
-		absolute_path=@@root_directory+relative_path
-		dsk=DSK.read(absolute_path)
-		
+		absolute_path=make_absolute_path(relative_path)
+		dsk=get_dsk_from_cache(absolute_path)
 		if (dsk.is_dos33?) then
 			s+="<table>\n<th>TYPE</th><th>SECTORS</th><th>NAME</th></tr>\n"
 			dsk.files.each_value do |f|
-				s+="<td>#{f.file_type}</td><td>#{sprintf('%03d',f.sector_count)}</td><td><a href=/showfile/#{CGI.escape(relative_path)+'?filename='+CGI.escape(f.filename)}>#{f.filename}</a></td></tr>\n"
+				display_url="/showfile/#{uri_encode(relative_path)+'?filename='+uri_encode(f.filename)}"
+				s+="<td>#{f.file_type}</td><td>#{sprintf('%03d',f.sector_count)}</td><td>#{f.filename}</td>"
+				s+="<td><a href=#{display_url}&mode=hex>hex dump</a></td>"
+				if f.file_type=="T" then
+					s+="<td><a href=#{display_url}&mode=text>text</a></td>"
+				else
+					s+="<td><a href=#{display_url}&mode=list>listing</a></td>"
+				end
+				
+				s+="</tr>\n"
 			end
 			s+="</table>"
 		else
@@ -141,26 +177,30 @@ def make_catalog(relative_path)
 		s+="<i>ERROR:#{exception}</i>"
 	end
 	s
-	
-	
-	
-	
 end
-def show_file(relative_path,filename)
-	absolute_path=@@root_directory+relative_path
-	dsk=DSK.read(absolute_path)
+def show_file(relative_path,filename,display_mode)
+	absolute_path=make_absolute_path(relative_path)
+	dsk=get_dsk_from_cache(absolute_path)
 	file=dsk.files[filename]
 	if file.nil? then
 		s="<i>#{filename} not found</i>"
 	else 
-		s="<hl><pre>#{file.file_type=='B'?file.disassembly : file.to_s}\n</pre><hl>"
+		s="<hl><pre>"
+		if display_mode=="hex" then
+			s+=file.hex_dump
+		elsif display_mode=="list" && file.file_type=='B'
+			then s+=file.disassembly 
+		else 
+			s+= file.to_s
+		end
+		s+="\n</pre><hl>"
 	end
 	s
 end
 
 class DirectoryServlet < HTTPServlet::AbstractServlet
 	def do_GET(req,res)
-		relative_path=CGI.unescape(req.path).sub(/^\/dir/,"")
+		relative_path=URI.unescape(req.path).sub(/^\/dir/,"")
 		res['Content-Type']="text/html"
 		res.body=common_header+make_navigation_path(relative_path)+common_footer
 	end
@@ -168,7 +208,7 @@ end
 
 class CatalogServlet < HTTPServlet::AbstractServlet
 	def do_GET(req,res)
-		relative_path=CGI.unescape(req.path).sub(/^\/catalog/,"")
+		relative_path=URI.unescape(req.path).sub(/^\/catalog/,"")
 		res['Content-Type']="text/html"
 		res.body=common_header+make_navigation_path(relative_path)+make_catalog(relative_path)+common_footer
 	end
@@ -176,10 +216,11 @@ end
 
 class ShowFileServlet < HTTPServlet::AbstractServlet
 	def do_GET(req,res)
-		relative_path=CGI.unescape(req.path).sub(/^\/showfile/,"")
-		filename=CGI.unescape(req.query['filename'])
+		relative_path=URI.unescape(req.path).sub(/^\/showfile/,"")
+		filename=URI.unescape(req.query['filename'])
+		display_mode=req.query['mode']
 		res['Content-Type']="text/html"
-		res.body=common_header+make_navigation_path(relative_path,filename)+show_file(relative_path,filename)+common_footer
+		res.body=common_header+make_navigation_path(relative_path,filename)+show_file(relative_path,filename,display_mode)+common_footer
 	end
 end
 
