@@ -2,6 +2,8 @@ V0.1.5
 bugfix - the S-C Assembler file detect routine was sometimes getting into endless loop
 added 'dskserver.rb'
 --explode now lets an output directory be specified by --output 
+added hex-dump output
+bugfix - incorrect spacing in applesoft listing
 
 V0.1.4
 bugfix - errors on case-sensitive platforms (require 'YAML'=>require'yaml')
